_generated-doc/3.0/config/quarkus-quartz.adoc

:summaryTableId: quarkus-quartz
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-quartz_configuration]]link:#quarkus-quartz_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.clustered]]`link:#quarkus-quartz_quarkus.quartz.clustered[quarkus.quartz.clustered]`

[.description]
--
Enable cluster mode or not. 
If enabled make sure to set the appropriate cluster properties.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_CLUSTERED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_CLUSTERED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.cluster-checkin-interval]]`link:#quarkus-quartz_quarkus.quartz.cluster-checkin-interval[quarkus.quartz.cluster-checkin-interval]`

[.description]
--
The frequency (in milliseconds) at which the scheduler instance checks-in with other instances of the cluster.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_CLUSTER_CHECKIN_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_CLUSTER_CHECKIN_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|long 
|`15000`


a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.store-type]]`link:#quarkus-quartz_quarkus.quartz.store-type[quarkus.quartz.store-type]`

[.description]
--
The type of store to use. 
When using `StoreType++#++JDBC_CMT` or `StoreType++#++JDBC_TX` configuration values make sure that you have the datasource configured. See link:https://quarkus.io/guides/datasource[Configuring your datasource] for more information. 
To create Quartz tables, you can perform a schema migration via the link:https://quarkus.io/guides/flyway[Flyway extension] using a SQL script matching your database picked from link:https://github.com/quartz-scheduler/quartz/blob/master/quartz-core/src/main/resources/org/quartz/impl/jdbcjobstore[Quartz repository].

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_STORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_STORE_TYPE+++`
endif::add-copy-button-to-env-var[]
-- a|
`ram`, `jdbc-tx`, `jdbc-cmt` 
|`ram`


a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.datasource]]`link:#quarkus-quartz_quarkus.quartz.datasource[quarkus.quartz.datasource]`

[.description]
--
The name of the datasource to use. 
Optionally needed when using the `jdbc-tx` or `jdbc-cmt` store types. If not specified, defaults to using the default datasource.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_DATASOURCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_DATASOURCE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.table-prefix]]`link:#quarkus-quartz_quarkus.quartz.table-prefix[quarkus.quartz.table-prefix]`

[.description]
--
The prefix for quartz job store tables. 
Ignored if using a `ram` store.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_TABLE_PREFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_TABLE_PREFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|`QRTZ_`


a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.select-with-lock-sql]]`link:#quarkus-quartz_quarkus.quartz.select-with-lock-sql[quarkus.quartz.select-with-lock-sql]`

[.description]
--
The SQL string that selects a row in the "LOCKS" table and places a lock on the row. 
If not set, the default value of Quartz applies, for which the "++{++0++}++" is replaced during run-time with the `table-prefix`, the "++{++1++}++" with the `instance-name`. 
An example SQL string `SELECT ++*++ FROM ++{++0++}++LOCKS WHERE SCHED_NAME = ++{++1++}++ AND LOCK_NAME = ? FOR UPDATE`

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_SELECT_WITH_LOCK_SQL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_SELECT_WITH_LOCK_SQL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-quartz_quarkus.quartz.instance-name]]`link:#quarkus-quartz_quarkus.quartz.instance-name[quarkus.quartz.instance-name]`

[.description]
--
The name of the Quartz instance.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_INSTANCE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_INSTANCE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`QuarkusQuartzScheduler`


a| [[quarkus-quartz_quarkus.quartz.instance-id]]`link:#quarkus-quartz_quarkus.quartz.instance-id[quarkus.quartz.instance-id]`

[.description]
--
The identifier of Quartz instance that must be unique for all schedulers working as if they are the same *logical* Scheduler within a cluster. Use the default value `AUTO` or some of the configured link:https://quarkus.io/guides/quartz#quarkus-quartz_quarkus.quartz.instance-id-generators-instance-id-generators[instance ID generators] if you wish the identifier to be generated for you.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_INSTANCE_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_INSTANCE_ID+++`
endif::add-copy-button-to-env-var[]
--|string 
|`AUTO`


a| [[quarkus-quartz_quarkus.quartz.batch-trigger-acquisition-fire-ahead-time-window]]`link:#quarkus-quartz_quarkus.quartz.batch-trigger-acquisition-fire-ahead-time-window[quarkus.quartz.batch-trigger-acquisition-fire-ahead-time-window]`

[.description]
--
The amount of time in milliseconds that a trigger is allowed to be acquired and fired ahead of its scheduled fire time.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_BATCH_TRIGGER_ACQUISITION_FIRE_AHEAD_TIME_WINDOW+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_BATCH_TRIGGER_ACQUISITION_FIRE_AHEAD_TIME_WINDOW+++`
endif::add-copy-button-to-env-var[]
--|long 
|`0`


a| [[quarkus-quartz_quarkus.quartz.batch-trigger-acquisition-max-count]]`link:#quarkus-quartz_quarkus.quartz.batch-trigger-acquisition-max-count[quarkus.quartz.batch-trigger-acquisition-max-count]`

[.description]
--
The maximum number of triggers that a scheduler node is allowed to acquire (for firing) at once.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_BATCH_TRIGGER_ACQUISITION_MAX_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_BATCH_TRIGGER_ACQUISITION_MAX_COUNT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`1`


a| [[quarkus-quartz_quarkus.quartz.thread-count]]`link:#quarkus-quartz_quarkus.quartz.thread-count[quarkus.quartz.thread-count]`

[.description]
--
The size of scheduler thread pool. This will initialize the number of worker threads in the pool.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_THREAD_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_THREAD_COUNT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`25`


a| [[quarkus-quartz_quarkus.quartz.thread-priority]]`link:#quarkus-quartz_quarkus.quartz.thread-priority[quarkus.quartz.thread-priority]`

[.description]
--
Thread priority of worker threads in the pool.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_THREAD_PRIORITY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_THREAD_PRIORITY+++`
endif::add-copy-button-to-env-var[]
--|int 
|`5`


a| [[quarkus-quartz_quarkus.quartz.misfire-threshold]]`link:#quarkus-quartz_quarkus.quartz.misfire-threshold[quarkus.quartz.misfire-threshold]`

[.description]
--
Defines how late the schedulers should be to be considered misfired.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_MISFIRE_THRESHOLD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_MISFIRE_THRESHOLD+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`60S`


a| [[quarkus-quartz_quarkus.quartz.start-mode]]`link:#quarkus-quartz_quarkus.quartz.start-mode[quarkus.quartz.start-mode]`

[.description]
--
Scheduler can be started in different modes: normal, forced or halted. By default, the scheduler is not started unless a `io.quarkus.scheduler.Scheduled` business method is found. If set to "forced", scheduler will be started even if no scheduled business methods are found. This is necessary for "pure" programmatic scheduling. Additionally, setting it to "halted" will behave just like forced mode but the scheduler will not start triggering jobs until an explicit start is called from the main scheduler. This is useful to programmatically register listeners before scheduler starts performing some work.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_START_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_START_MODE+++`
endif::add-copy-button-to-env-var[]
-- a|
`normal`, `forced`, `halted` 
|`normal`


a| [[quarkus-quartz_quarkus.quartz.shutdown-wait-time]]`link:#quarkus-quartz_quarkus.quartz.shutdown-wait-time[quarkus.quartz.shutdown-wait-time]`

[.description]
--
The maximum amount of time Quarkus will wait for currently running jobs to finish. If the value is `0`, then Quarkus will not wait at all for these jobs to finish - it will call `org.quartz.Scheduler.shutdown(false)` in this case.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_SHUTDOWN_WAIT_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_SHUTDOWN_WAIT_TIME+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-quartz_quarkus.quartz.simple-trigger.misfire-policy]]`link:#quarkus-quartz_quarkus.quartz.simple-trigger.misfire-policy[quarkus.quartz.simple-trigger.misfire-policy]`

[.description]
--
The quartz misfire policy for this job.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_SIMPLE_TRIGGER_MISFIRE_POLICY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_SIMPLE_TRIGGER_MISFIRE_POLICY+++`
endif::add-copy-button-to-env-var[]
-- a|
`smart-policy`, `ignore-misfire-policy`, `fire-now`, `simple-trigger-reschedule-now-with-existing-repeat-count`, `simple-trigger-reschedule-now-with-remaining-repeat-count`, `simple-trigger-reschedule-next-with-remaining-count`, `simple-trigger-reschedule-next-with-existing-count`, `cron-trigger-do-nothing` 
|`smart-policy`


a| [[quarkus-quartz_quarkus.quartz.cron-trigger.misfire-policy]]`link:#quarkus-quartz_quarkus.quartz.cron-trigger.misfire-policy[quarkus.quartz.cron-trigger.misfire-policy]`

[.description]
--
The quartz misfire policy for this job.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_CRON_TRIGGER_MISFIRE_POLICY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_CRON_TRIGGER_MISFIRE_POLICY+++`
endif::add-copy-button-to-env-var[]
-- a|
`smart-policy`, `ignore-misfire-policy`, `fire-now`, `simple-trigger-reschedule-now-with-existing-repeat-count`, `simple-trigger-reschedule-now-with-remaining-repeat-count`, `simple-trigger-reschedule-next-with-remaining-count`, `simple-trigger-reschedule-next-with-existing-count`, `cron-trigger-do-nothing` 
|`smart-policy`


a| [[quarkus-quartz_quarkus.quartz.run-blocking-scheduled-method-on-quartz-thread]]`link:#quarkus-quartz_quarkus.quartz.run-blocking-scheduled-method-on-quartz-thread[quarkus.quartz.run-blocking-scheduled-method-on-quartz-thread]`

[.description]
--
When set to `true`, blocking scheduled methods are invoked on a thread managed by Quartz instead of a thread from the regular Quarkus thread pool (default). 
When this option is enabled, blocking scheduled methods do not run on a `duplicated context`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_RUN_BLOCKING_SCHEDULED_METHOD_ON_QUARTZ_THREAD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_RUN_BLOCKING_SCHEDULED_METHOD_ON_QUARTZ_THREAD+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


h|[[quarkus-quartz_quarkus.quartz.instance-id-generators-instance-id-generators]]link:#quarkus-quartz_quarkus.quartz.instance-id-generators-instance-id-generators[Instance ID generators]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.instance-id-generators.-generator-name-.class]]`link:#quarkus-quartz_quarkus.quartz.instance-id-generators.-generator-name-.class[quarkus.quartz.instance-id-generators."generator-name".class]`

[.description]
--
Class name for the configuration.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_INSTANCE_ID_GENERATORS__GENERATOR_NAME__CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_INSTANCE_ID_GENERATORS__GENERATOR_NAME__CLASS+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.instance-id-generators.-generator-name-.properties-property-name]]`link:#quarkus-quartz_quarkus.quartz.instance-id-generators.-generator-name-.properties-property-name[quarkus.quartz.instance-id-generators."generator-name".properties]`

[.description]
--
The properties passed to the class.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_INSTANCE_ID_GENERATORS__GENERATOR_NAME__PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_INSTANCE_ID_GENERATORS__GENERATOR_NAME__PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


h|[[quarkus-quartz_quarkus.quartz.trigger-listeners-trigger-listeners]]link:#quarkus-quartz_quarkus.quartz.trigger-listeners-trigger-listeners[Trigger listeners]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.trigger-listeners.-listener-name-.class]]`link:#quarkus-quartz_quarkus.quartz.trigger-listeners.-listener-name-.class[quarkus.quartz.trigger-listeners."listener-name".class]`

[.description]
--
Class name for the configuration.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_TRIGGER_LISTENERS__LISTENER_NAME__CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_TRIGGER_LISTENERS__LISTENER_NAME__CLASS+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.trigger-listeners.-listener-name-.properties-property-name]]`link:#quarkus-quartz_quarkus.quartz.trigger-listeners.-listener-name-.properties-property-name[quarkus.quartz.trigger-listeners."listener-name".properties]`

[.description]
--
The properties passed to the class.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_TRIGGER_LISTENERS__LISTENER_NAME__PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_TRIGGER_LISTENERS__LISTENER_NAME__PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


h|[[quarkus-quartz_quarkus.quartz.job-listeners-job-listeners]]link:#quarkus-quartz_quarkus.quartz.job-listeners-job-listeners[Job listeners]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.job-listeners.-listener-name-.class]]`link:#quarkus-quartz_quarkus.quartz.job-listeners.-listener-name-.class[quarkus.quartz.job-listeners."listener-name".class]`

[.description]
--
Class name for the configuration.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_JOB_LISTENERS__LISTENER_NAME__CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_JOB_LISTENERS__LISTENER_NAME__CLASS+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.job-listeners.-listener-name-.properties-property-name]]`link:#quarkus-quartz_quarkus.quartz.job-listeners.-listener-name-.properties-property-name[quarkus.quartz.job-listeners."listener-name".properties]`

[.description]
--
The properties passed to the class.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_JOB_LISTENERS__LISTENER_NAME__PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_JOB_LISTENERS__LISTENER_NAME__PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


h|[[quarkus-quartz_quarkus.quartz.plugins-plugins]]link:#quarkus-quartz_quarkus.quartz.plugins-plugins[Plugins]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.plugins.-plugin-name-.class]]`link:#quarkus-quartz_quarkus.quartz.plugins.-plugin-name-.class[quarkus.quartz.plugins."plugin-name".class]`

[.description]
--
Class name for the configuration.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_PLUGINS__PLUGIN_NAME__CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_PLUGINS__PLUGIN_NAME__CLASS+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.plugins.-plugin-name-.properties-property-name]]`link:#quarkus-quartz_quarkus.quartz.plugins.-plugin-name-.properties-property-name[quarkus.quartz.plugins."plugin-name".properties]`

[.description]
--
The properties passed to the class.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_PLUGINS__PLUGIN_NAME__PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_PLUGINS__PLUGIN_NAME__PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


h|[[quarkus-quartz_quarkus.quartz.misfire-policy-per-jobs-misfire-policy-per-job-configuration]]link:#quarkus-quartz_quarkus.quartz.misfire-policy-per-jobs-misfire-policy-per-job-configuration[Misfire policy per job configuration]

h|Type
h|Default

a| [[quarkus-quartz_quarkus.quartz.misfire-policy.-identity]]`link:#quarkus-quartz_quarkus.quartz.misfire-policy.-identity[quarkus.quartz.misfire-policy."identity"]`

[.description]
--
The quartz misfire policy for this job.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_MISFIRE_POLICY__IDENTITY_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_MISFIRE_POLICY__IDENTITY_+++`
endif::add-copy-button-to-env-var[]
-- a|
`smart-policy`, `ignore-misfire-policy`, `fire-now`, `simple-trigger-reschedule-now-with-existing-repeat-count`, `simple-trigger-reschedule-now-with-remaining-repeat-count`, `simple-trigger-reschedule-next-with-remaining-count`, `simple-trigger-reschedule-next-with-existing-count`, `cron-trigger-do-nothing` 
|`smart-policy`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
